Minor alignment fix for mobile

--- a/src/Components/Character/Character.module.scss
+++ b/src/Components/Character/Character.module.scss
@@ -22,7 +22,7 @@
     border-width: 16px 16px 0 0;
     border-color: red $color-white $color-white $color-white;
     @include for-mobile {
-      right: 120px;
+      right: 86.5%;
     }
   }
 
